# pretix-nix

./: flake.nix  nixos-module.nix  pyproject.toml  pyproject.toml.template
node-deps/: node-packages.nix
