[tool.poetry]
name = "pretix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
arabic-reshaper = "3.0.0"
babel = "^2.11.0"
beautifulsoup4 = ">=4.11.0,<4.12.0"
bleach = ">=5.0.0,<5.1.0"
celery = ">=5.2.0,<5.3.0"
chardet = ">=5.1.0,<5.2.0"
cryptography = ">=3.4.2"
css-inline = ">=0.8.0,<0.9.0"
defusedcsv = ">=1.1.0"
dj-static = "^0.0.6"
django = ">=3.2.0,<3.3.0"
django-bootstrap3 = ">=22.2.0,<22.3.0"
django-compressor = ">=4.3.0,<4.4.0"
django-countries = ">=7.5.0,<7.6.0"
django-filter = "22.1"
django-formset-js-improved = "0.5.0.3"
django-formtools = "2.4"
django-hierarkey = ">=1.1.0,<1.2.0"
django-hijack = ">=3.2.0,<3.3.0"
django-i18nfield = ">=1.9.4,<1.10.0"
django-libsass = "0.9"
django-localflavor = "3.1"
django-markup = "^1.6"
django-mysql = "^4.8.0"
django-oauth-toolkit = ">=2.2.0,<2.3.0"
django-otp = ">=1.1.0,<1.2.0"
django-phonenumber-field = ">=7.0.0,<7.1.0"
django-redis = ">=5.2.0,<5.3.0"
django-scopes = ">=1.2.0,<1.3.0"
django-statici18n = ">=2.3.0,<2.4.0"
djangorestframework = ">=3.14.0,<3.15.0"
dnspython = ">=2.2.0,<2.3.0"
drf-ujson2 = ">=1.7.0,<1.8.0"
isoweek = "^1.3.3"
jsonschema = "^4.17.3"
kombu = ">=5.2.0,<5.3.0"
libsass = ">=0.22.0,<0.23.0"
lxml = "^4.9.2"
markdown = "3.3.4"
mt-940 = ">=4.23.0,<4.24.0"
oauthlib = ">=3.2.0,<3.3.0"
openpyxl = ">=3.0.0,<3.1.0"
packaging = "^23.0"
paypalrestsdk = ">=1.13.0,<1.14.0"
paypal-checkout-serversdk = ">=1.0.0,<1.1.0"
pyjwt = ">=2.6.0,<2.7.0"
phonenumberslite = ">=8.13.0,<8.14.0"
pillow = ">=9.4.0,<9.5.0"
protobuf = ">=4.21.0,<4.22.0"
psycopg2-binary = "^2.9.5"
pycountry = "^22.3.5"
pycparser = "2.21"
pycryptodome = ">=3.16.0,<3.17.0"
pypdf2 = ">=2.12.0,<2.13.0"
python-bidi = ">=0.4.0,<0.5.0"
python-dateutil = ">=2.8.0,<2.9.0"
python-u2flib-server = ">=4.0.0,<5.0.0"
pytz = "^2022.7.1"
pyuca = "^1.2"
redis = ">=4.4.0,<4.5.0"
reportlab = ">=3.6.0,<3.7.0"
requests = ">=2.28.0,<2.29.0"
sentry-sdk = ">=1.10.0,<1.11.0"
sepaxml = ">=2.6.0,<2.7.0"
slimit = "^0.8.1"
static3 = ">=0.7.0,<0.8.0"
stripe = ">=5.0.0,<5.1.0"
text-unidecode = ">=1.0.0,<2.0.0"
tlds = ">=2020041600"
tqdm = ">=4.0.0,<5.0.0"
vat-moss-forked = "2020.3.20.0.11.0"
vobject = ">=0.9.0,<0.10.0"
webauthn = ">=0.4.0,<0.5.0"
zeep = ">=4.2.0,<4.3.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry>=0.12", "setuptools-rust", "setuptools"]
build-backend = "poetry.masonry.api"
